[metadata]
name = pbkdf2-reboot
description = pbkdf2 implementation in modern python with typing support.
version = 0.0.0
author = Sigmanificient
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    pbkdf2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    mypy>=0.950
    black>=22.3.0

[options.package_data]
slapping = py.typed
